# QTDemo

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: currencyworker.h
src/: currencyworker.cpp  main.qml
test/: CMakeLists.txt  integration_tests.cpp  unit_tests.cpp
